Fixing minor typo caused by copy/paste from pdf.
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5479 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SID-STSM2009-lossius/STSM09.tex
+++ b/Papers/SID-STSM2009-lossius/STSM09.tex
@@ -95,7 +95,7 @@ Apart from being used for artistic purposes, Jamoma is also used for research an
 
 The Jamoma  API offers simple access to all parameters of all modules, but relatively few modules so far takes advantage of this for advanced controlling purposes. The main exceptions are two modules providing text-based cue list systems, a number of modules for one-to-one mappings between parameter values, and a series of modules for work on SDIF - Sound Description Interchange Format data \cite{Nymoen_2008_GDIF_sync}. In addition \emph{Virage Sequencer} is currently being development within the framework the Virage Platform as a stand-alone OSC sequencer able to interface with Jamoma \footnote{http://www.plateforme-virage.org/}.
 
-FTM is a shared library and a set of modules extending the signal and message data ﬂow paradigm of Max permitting the representation and processing of complex data structures such as matrices, sequences or dictionaries as well as tuples, MIDI events or score elements \cite{Schnell:2005ftm}. FTM forms the basis for the MnM toolbox, dedicated to mapping between gesture and sound, and more generally to statistical and machine learning methods \cite{Bevilacqua:2005mnm}, as well as Gabor, a unified framework for a number of advanced audio processing techniques \cite{Schnell_2005_Gabor}.
+FTM is a shared library and a set of modules extending the signal and message data flow paradigm of Max permitting the representation and processing of complex data structures such as matrices, sequences or dictionaries as well as tuples, MIDI events or score elements \cite{Schnell:2005ftm}. FTM forms the basis for the MnM toolbox, dedicated to mapping between gesture and sound, and more generally to statistical and machine learning methods \cite{Bevilacqua:2005mnm}, as well as Gabor, a unified framework for a number of advanced audio processing techniques \cite{Schnell_2005_Gabor}.
 
 
 
