changes on the pdfs
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5689 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Resources/Specifications/NodeLib/NodeLib.tex
+++ b/Resources/Specifications/NodeLib/NodeLib.tex
@@ -106,13 +106,12 @@ Bob, a sound engineer, is used to using tracks for grouping effects, and would l
 \subsection{Phase 2 Use Cases}
 
 \subsubsection{Case 4: ???? the instance manager}
-???? wants to manage instances in his Jamoma setup. For example, he has a collection of player modules (named /player.1 to /player.n), and want to play a sound on one of them. As he is a lazy guy, and likes to outsource his brain activity to computers, ???? would like the system to automatically manage the instance to the first available player in this group. This could be the case as well for a module having sub-modules (consider e.g. a mixind console module, with several tracks) This would mean that modules (or nodes) would have to have a @busy attribute. 
+???? wants to manage instances in his Jamoma setup. For example, he has a collection of player modules (named /player.1 to /player.n), and want to play a sound on one of them. As he is a lazy guy, and likes to outsource his brain activity to computers, ???? would like the system to automatically manage the instance to the first available player in this group. This could be the case as well for a module having sub-modules (consider e.g. a mixing console module, with several tracks) This would mean that modules (or nodes) would have to have a @busy attribute. 
 
 \subsubsection{Case 5: ???? the wildcard player}
 /module.*/parameter, /*/parameter, /module.2/track.*/parameter\\
 /module.[2-4]/parameter\\
 need to keep track of the namespace in a hashtab ?
-
 
 
 
