forgotten to commit this final edits
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5766 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -319,8 +319,8 @@ At present, two modules operate at the Authoring Layer; Boids simulation of co-o
 \subsection{GMEM Holo-Edit}
 Initiated by L. Pottier \cite{PottierDAFX98}, Holo-Edit is part of the GMEM Holophon project and conceptualized as an authoring tool for spatialization. 
 
-This standalone application uses the timeline paradigm found in traditional DAWs to record, edit, and play back control data. The data is manipulated in the form of trajectories or sequences of time-tagged points in a 3D space, and the trajectories can be generated or modified by a set of tools allowing specific spatial and temporal behaviors including symmetry, proportion, translation, acceleration, and local exaggeration. Different scene representation windows allow the user to modify data from different (compositional) viewpoints: \emph{Room} shows a top view of the virtual space, the \emph{Time Editor} shows the traditional DAW automation curve view and, finally, the \emph{Score Window} represents the whole composition in a multi-track block-based view. Holo-Edit's space and time representations are generic and can be adapted to any render at the Encoding Layer. 
-To allow precise alignment of sound cues to desired spatial movements, waveform representations of sounds and associated trajectories are displayed together. 
+This standalone application uses the timeline paradigm found in traditional DAWs to record, edit, and play back control data. The data is manipulated in the form of trajectories or sequences of time-tagged points in a 3D space, and the trajectories can be generated or modified by a set of tools allowing specific spatial and temporal behaviors including symmetry, proportion, translation, acceleration, and local exaggeration. Different scene representation windows allow the user to modify data from different (compositional) viewpoints: \emph{Room} shows a top view of the virtual space, the \emph{Time Editor} shows the traditional DAW automation curve view and, finally, the \emph{Score Window} represents the whole composition in a multi-track block-based view. Holo-Edit's space and time representations are generic and can be adapted to any renderer at the Encoding Layer. 
+To allow precise alignment of sound cues to desired spatial movements, waveform representations of sounds and associated trajectories are displayed and can be edited together. 
 %Even if Holo-Edit is combined with a auditory virtual environment such as \cite{CMJ08-VIMIC}, its generic nature allows to use it in a more abstract way, thinking more of movements in an arbitrary space ( may it be acoustic, symbolic, semiotic ...).[TODO I changed something here, but I don't know what you really mean] [ FIXED BY CHARLES : I wanted to point that the movements composed are not made to be strongly linked with the scales of our physical world. But we can absolutly erase this line as it's not fundamental, was just a note ]      
 
 
